# ai-cdmx-banner-draft-maker

./: .env.example  .envrc  .gitignore  CLAUDE.md  Makefile  QUICKSTART.md  README.md  TEMPLATE_REQUIREMENTS.md  TODO.md  banner_api_cli.py  banner_auto.py  banner_cli.py  banner_gui.py  banner_gui_tk.py  gimp_scripts_gimp3.py  image_apis.py  pyproject.toml
docs/: api-cli.md  cmdline.md
gimp_scripts/: banner_generate_complete.py.template  banner_generate_main.py.template  banner_generate_photo.py.template  banner_generate_save.py.template  template_create.py.template
prompts/: banner_generation_prompts.md
tools/: build_partner_strip.py
